src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-ofT-dwP0.25-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen floating: true\ndefault column width: P0.25\ndefault window height: P0.5\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 320 × 360, bounds: 1280 × 720, states: []

post-map configures:
size: 320 × 360, bounds: 1280 × 720, states: []
size: 320 × 360, bounds: 1280 × 720, states: [Activated]
